--- a/index.html
+++ b/index.html
@@ -13,55 +13,30 @@
     <!-- javascript -->
 </head>
 <body>
-<div class="row">
-    <div class="column-1">
-        <p>1</p>
-    </div>
-</div>
-<div class="row">
-    <div class="column-2">
-        <p>2</p>
-    </div>
-    <div class="column-2">
-        <p>3</p>
-    </div>
-</div>
-<div class="row">
-    <div class="column-4">
-        <p>4</p>
-    </div>
-    <div class="column-4">
-        <p>5</p>
-    </div>
-    <div class="column-4">
-        <p>6</p>
-    </div>
-    <div class="column-4">
-        <p>7</p>
-    </div>
-</div>
-<div class="row">
-    <div class="column-2">
-        <p>8</p>
-    </div>
-    <div class="column-4">
-        <p>9</p>
-    </div>
-    <div class="column-4" id="caja-10">
-        <p>10</p>
-    </div>
-</div>
-<div class="row">
-    <div class="column-3">
-        <p>11</p>
-    </div>
-    <div class="column-3">
-        <p>12</p>
-    </div>
-    <div class="column-3">
-        <p>13</p>
-    </div>
-</div>
-
+    <header class="flex">
+        <h1>Blog</h1>
+    </header>
+    <section class="row">
+        <div class="column-4 padding-s">
+            <h3>Titulo 1</h3>
+            <p>Descripción 1</p>
+            <div id="card-1" class="card"></div>
+        </div>
+        <div class="column-4 padding-s">
+            <h3>Titulo 2</h3>
+            <p>Descripción 2</p>
+            <div id="card-2" class="card"></div>
+        </div>
+        <div class="column-4 padding-s">
+            <h3>Titulo 3</h3>
+            <p>Descripción 3</p>
+            <div id="card-3" class="card"></div>
+        </div>
+        <div class="column-4 padding-s">
+            <h3>Titulo 4</h3>
+            <p>Descripción 4</p>
+            <div id="card-4" class="card"></div>
+        </div>
+    </section>
 </body>
 </html>
